--- a/package.json
+++ b/package.json
@@ -11,15 +11,11 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.1",
-    "@stripe/react-stripe-js": "^2.5.0",
-    "@stripe/stripe-js": "^3.0.3",
     "dot-env": "^0.0.1",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
